<resources>
    <string name="app_name">Susurrus</string>

    <!--
        Action bar
    -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_discover">Scannen</string>
    <string name="action_room_done">Fertig</string>
    <string name="action_settings_done">Fertig</string>
    <string name="action_password_done">Entschlüsseln</string>
    <string name="action_send_file">Datei schicken</string>
    <string name="action_send_take_photo">Kamera</string>
    <string name="action_send_pick_photo">Foto</string>
    <string name="action_send_take_audio">Audio</string>
    <string name="action_send_take_video">Video</string>


    <!--
        Main Activity
    -->
    <string name="main_empty_headline">Keine Räume in deiner Nähe</string>
    <string name="main_empty_desc">
        Benutze den Refresh-Button um deine \n Umgebung
        zu scannen.
    </string>
    <string name="main_warn_wifi_title">Bereits verbunden</string>
    <!--<string name="main_warn_wifi_content">
        Du bist leider schon mit einem Wlan-Access-Point verbunden. Soll Susurrus für dich die
        Verbindung trennen?
    </string>-->
    <string name="main_warn_wifi_content">
        Du bist leider schon mit einem Wlan-Access-Point verbunden. Damit Susurrus funktioniert
        muss du die Verbindung unterbrechen.
    </string>
    <string name="main_warn_wifi_proceed">Verstanden</string>
    <string name="main_warn_wifi_cancel">Abbrechen</string>

    <!-- Main Activity Room Item -->
    <string name="main_room_owner_desc">von</string>

    <!-- Main Activity Connection Dialog -->
    <string name="main_dialog_headline">Verbinde mit Chat</string>
    <string name="main_dialog_content">
        Baue Verbindung auf ...
    </string>
    <string name="main_dialog_password_content">Der Raum benötigt ein Passwort</string>
    <string name="main_dialog_password_wrong">Das Passwort ist leider falsch</string>
    <string name="main_dialog_password_hint">Passwort eingeben</string>
    <string name="main_dialog_group_connected">Chat akzeptiert die Verbindung ...</string>
    <string name="main_dialog_group_not_connected">Chat akzeptiert keine Verbindung ...</string>
    <string name="main_dialog_connected">Chat ist erreichbar ...</string>
    <string name="main_dialog_authenticated">Du wirst hinzugefügt ...</string>
    <string name="main_dialog_exception">Ein unerwarteter Fehler ist aufgetreten!</string>
    <string name="main_dialog_cancel">Abbrechen</string>



    <!--
        Intro Activity
    -->
    <string name="intro_activity">Intro Activity</string>
    <string name="intro_welcome">
        Bevor du loslegen kannst müssen noch einige wichtige Einstellungen getroffen werden
    </string>
    <string name="intro_home_headline">Wohnort</string>
    <string name="intro_home_question">
        Für welchen Wohnort möchtest du Benachrichtigungen erhalten?
    </string>
    <string name="intro_question_two">In welchem Bezirk wohnst du?</string>
    <string name="intro_question_three">Welche Mülltypen interessieren dich?</string>
    <string name="intro_button_next">Weiter</string>
    <string name="intro_button_prev">Zurück</string>
    <string name="intro_button_ready">Fertig</string>
    <string name="intro_one_headline">Willkommen</string>
    <string name="intro_two_headline">Anforderungen</string>
    <string name="intro_two_content_direct">WifiDirect wird unterstützt</string>
    <string name="intro_two_content_hotspot">Keine aktive Verbindung zu einem Hotspot</string>
    <string name="intro_three_headline">Benutzername</string>
    <string name="intro_four_headline">Passwort</string>
    <string name="intro_four_desc">
        Deine persönlichen Daten und Schlüssel werden mit einem Passwort geschützt. Bitte gib
        jetzt dein geheimes Passwort ein.
    </string>
    <string name="intro_four_password_hint">Passwort</string>
    <string name="intro_four_password_hint_two">Passwort wiederholen</string>
    <string name="intro_finish_dialog_title">Erzeuge Profil</string>
    <string name="intro_finish_dialog_content">Einen Moment Geduld ...</string>


    <!--
        Create Activity
    -->
    <string name="create_activity">Raum erstellen</string>
    <string name="create_room_name_hint">Raum Name</string>
    <string name="create_room_name_error">Kein gültiger Raumname: Aa-Zz erlaubt.</string>
    <string name="create_room_category_hint">Raum Thema, z.B. "Datenschutz"</string>
    <string name="create_room_category_error">Kein gültiges Thema: Aa-Zz erlaubt.</string>
    <string name="create_room_encryption_headline">Schutz</string>
    <string name="create_room_encryption_active">Privat</string>
    <string name="create_room_encryption_disabled">Öffentlich</string>
    <string name="create_room_encryption">Passwort</string>
    <string name="create_room_encryption_error">Kein gültiges Passwort eingegeben.</string>
    <string name="create_dialog_headline">Erstelle Raum</string>
    <string name="create_dialog_content">Einen Moment Geduld ...</string>
    <string name="create_dialog_group_error">Ein unbekannter Fehler ist aufgetreten</string>
    <string name="create_dialog_group_creating">Raum wird erstellt ...</string>
    <string name="create_dialog_group_created">Raum erfolgreich erstellt</string>




    <!--
        Chat Activity
    -->
    <string name="title_activity_chat">Chat</string>
    <string name="chat_drawer_title">Menü</string>
    <string name="chat_drawer_close">Menü schließen</string>
    <string name="chat_drawer_open">Menü öffnen</string>
    <string name="chat_warn_exit_title">Raum verlassen</string>
    <string name="chat_warn_exit_content_master">
        Wenn du den Raum verlässt, wird der Chat geschlossen. Möchtest du fortfahren?
    </string>
    <string name="chat_warn_exit_content_slave">
        Möchtest du den Raum wirklich verlassen?
    </string>
    <string name="chat_warn_exit_proceed">Weiter</string>
    <string name="chat_warn_exit_cancel">Abbrechen</string>
    <string name="chat_upload_notification">Neuer Upload von</string>

    <!--
        Settings Activity
    -->
    <string name="settings_activity">Einstellungen</string>
    <string name="settings_user_name_hint">Benutzername</string>
    <string name="settings_generate_key">Neuen geheimen Schlüssel generieren</string>
    <string name="settings_generate_key_title">Generiere Schlüssel</string>
    <string name="settings_generate_key_content">Einen Moment Geduld ...</string>
    <string name="settings_generate_key_done">Speichere neuen Schlüssel ...</string>
    <string name="settings_change_password">Neues Applikations-Password festlegen</string>
    <string name="settings_change_password_dialog_title">Aktuelles Passwort</string>
    <string name="settings_change_password_dialog_title_new">Neues Passwort</string>
    <string name="settings_change_password_dialog_hint_new">Neues Passwort eingeben</string>


    <!--
        Password Activity
    -->
    <string name="password_activity">Susurrus</string>
    <string name="password_input_hint">Passwort</string>
    <string name="password_input_error">Das eingegebene Passwort ist falsch!</string>
    <string name="password_input_desc">
        Deine persönlichen Daten und Schlüssel sind mit einem Passwort geschützt. Um Susurrus nutzen
        zu können, musst du zuerst dein geheimes Passwort eingeben.
    </string>
    <string name="password_dialog_content">Entsperre vertrauliche Daten ...</string>

    <!--
        Notifications
    -->
    <string name="notify_running_title">Susurrus</string>
    <string name="notify_running_content">Chat-Raum im Hintergrund geöffnet</string>
    <string name="notify_running_stop">Beenden</string>




</resources>
