<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:id="@+id/intro_fragment_four"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rocks.susurrus.susurrus.fragments.IntroPageOneFragment"
    android:rowCount="3"
    android:columnCount="3"
    android:padding="30dp"
    android:background="@color/susurrus_purple">

    <TextView
        android:id="@+id/intro_four_headline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_four_headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/intro_four_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_four_headline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/intro_four_desc"
        android:textColor="@color/susurrus_white"
        android:gravity="center"
        />

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/intro_four_passwort_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_four_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        float:fletTextAppearance="@style/floatlabelededittext"
        >

        <EditText
            android:id="@+id/intro_four_passwort_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/susurrus_white"
            android:textColorHint="@color/susurrus_white"
            android:hint="@string/intro_four_password_hint"
            android:password="true"
            />

    </com.wrapp.floatlabelededittext.FloatLabeledEditText>


    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/intro_four_passwort_container_two"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_four_passwort_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        float:fletTextAppearance="@style/floatlabelededittext"
        >

        <EditText
            android:id="@+id/intro_four_passwort_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/susurrus_white"
            android:textColorHint="@color/susurrus_white"
            android:hint="@string/intro_four_password_hint_two"
            android:password="true"
            />

    </com.wrapp.floatlabelededittext.FloatLabeledEditText>



</RelativeLayout>
