<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/create_room_container"
    tools:context="rocks.susurrus.susurrus.CreateActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/create_room_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/decision_256"
            android:background="@android:drawable/dialog_holo_light_frame"
            />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/create_room_name_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_room_image"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            >

            <EditText
                android:id="@+id/create_room_name"
                android:maxLength="20"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_room_name_hint"
                android:layout_below="@+id/create_room_image"
                />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <TextView
            android:id="@+id/create_room_name_error"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/create_room_category_container"
            android:layout_alignLeft="@+id/create_room_name_container"
            android:layout_alignStart="@+id/create_room_name_container"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/create_room_name_error"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/create_room_category_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/create_room_name_container"
            >

            <EditText
                android:id="@+id/create_room_category"
                android:maxLength="20"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/create_room_category_hint"
                android:layout_centerHorizontal="true"
                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <TextView
            android:id="@+id/create_room_category_error"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_room_category_container"
            android:layout_alignLeft="@+id/create_room_name_container"
            android:layout_alignStart="@+id/create_room_name_container"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/create_room_category_error"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/create_room_encryption_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/create_room_encryption_headline"
            android:layout_below="@+id/create_room_category_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            />

        <LinearLayout
            android:id="@+id/create_encryption_container"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:weightSum="2"
            android:layout_below="@+id/create_room_encryption_headline"
            android:layout_alignLeft="@+id/create_room_category_container"
            android:layout_alignStart="@+id/create_room_category_container"
            >

            <RelativeLayout
                android:id="@+id/create_encryption_activated"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                >

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/privacy_48"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/create_room_encryption_active"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/create_encryption_disabled"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                >

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/globe_48"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/create_room_encryption_disabled"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    />

            </RelativeLayout>
        </LinearLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/create_encryption_password_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            float:fletPaddingBottom="0dp"
            android:layout_below="@+id/create_encryption_container"
            android:layout_alignLeft="@+id/create_encryption_container"
            android:layout_alignStart="@+id/create_encryption_container"
            >

            <EditText
                android:id="@+id/create_encryption_password"
                android:maxLength="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_room_encryption"
                android:inputType="textPassword"
                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <TextView
            android:id="@+id/create_room_encryption_error"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_encryption_password_container"
            android:layout_alignLeft="@+id/create_room_name_container"
            android:layout_alignStart="@+id/create_room_name_container"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="-5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/create_room_encryption_error"
            android:textColor="@color/error"
            android:visibility="invisible"
            />

    </RelativeLayout>
</LinearLayout>
