<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rocks.susurrus.susurrus.fragments.IntroPageOneFragment"
    android:rowCount="3"
    android:columnCount="3"
    android:padding="20dp"
    android:background="@color/susurrus_orange"
    >


    <TextView
        android:id="@+id/intro_two_headline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_two_headline"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        />

    <RelativeLayout
        android:id="@+id/intro_two_direct_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_two_headline"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/intro_two_direct_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/checkmark_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/intro_two_direct_status"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/intro_two_content_direct"
            android:textColor="@color/susurrus_white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/intro_two_hotspot_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_two_direct_container"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        >

        <ImageView
            android:id="@+id/intro_two_hotspot_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/checkmark_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/intro_two_hotspot_status"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/intro_two_content_hotspot"
            android:textColor="@color/susurrus_white"
            />
    </RelativeLayout>

</RelativeLayout>
