<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/susurrus_purple"
    tools:context="rocks.susurrus.susurrus.PasswordActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >

        <ImageView
            android:id="@+id/password_susurrus_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/entering_heaven_alive_96"
            />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/password_input_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_susurrus_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            float:fletTextAppearance="@style/floatlabelededittext"
            >

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_room_image"
                android:textColor="@color/susurrus_white"
                android:hint="@string/password_input_hint"
                android:textColorHint="@color/susurrus_white"
                android:password="true"
                />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <TextView
            android:id="@+id/password_input_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password_input_error"
            android:textColor="@color/error"
            android:layout_below="@+id/password_input_container"
            android:layout_alignLeft="@+id/password_input_container"
            android:layout_alignStart="@+id/password_input_container"
            android:layout_alignRight="@+id/password_input_container"
            android:layout_alignEnd="@+id/password_input_container"
            android:layout_marginLeft="4dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/password_input_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password_input_desc"
            android:textColor="@color/susurrus_white"
            android:layout_below="@+id/password_input_error"
            android:layout_alignLeft="@+id/password_input_container"
            android:layout_alignStart="@+id/password_input_container"
            android:layout_alignRight="@+id/password_input_container"
            android:layout_alignEnd="@+id/password_input_container"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>

</RelativeLayout>
